[package]
name = "pink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
queues = "1.0.2"
token_lookup_macro = { path = "token_lookup_macro" } 
js-sys = "0.3.58"

[dependencies.web-sys]
version = "0.3.58"
features = [
    "console"
]